--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,9 @@ form: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form name="sentMessage" id="contactForm"
-action="https://formspree.io/f/xzbqnkbw"
-method="POST"
->
+<form name="sentMessage" id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xzbqnkbw" method="post" data-np-intersection-state="observed">
+  <fieldset id="fs-frm-inputs">
+
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
@@ -21,7 +20,7 @@ method="POST"
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email Address</label>
-      <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required data-validation-required-message="Please enter your email address.">
+      <input type="email" class="form-control" placeholder="Email Address" id="email" name="_replyto" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
@@ -35,13 +34,20 @@ method="POST"
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Message</label>
-      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+      <textarea rows="5" class="form-control" placeholder="Message" name="message" id="message" required data-validation-required-message="Please enter a message."></textarea>
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <br>
   <div id="success"></div>
+  <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+
+</fieldset>
+
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    <button type="submit" value="Submit" class="btn btn-primary" id="sendMessageButton">Send</button>
   </div>
+
 </form>
+
+
