--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p></p>
+<p>My name is DELALI Amina, I am a computer Engineer and also a geomatician that works at the Algerian University of Mostaganem as a professor assistant.</p>
+<p>I am born and I live in Algeria. After I got my engineer diploma in Computing, I worked at the direction of transmissions related to my towns's district.
+<br>I was responsible; among other tasks, of the development of databases applications.</p>
+<p> Then, I joined the Center for Space Techniques of the Algerian Space Agency, where I got my magister diploma in Geomatics. </p>
+<p>After that, I joined the University of Mostaganem as a professor assistant where I teach primarily computing courses. </p>
 
-<p></p>
-
+<p>Then I decided to create a digital business, where I want to simply sell digital products, and share valuable content. The business is registered as a foreign owned LLC. So all the administration is registered in the US.   </p>
 <p class="mb-5"></p>
