--- a/_posts/2023-06-18-what.html
+++ b/_posts/2023-06-18-what.html
@@ -12,8 +12,8 @@ background: '/img/posts/01.png'
 
 <p>I am thankful to the people that share their knowledge, and help others solving their problems. This is why, I will share here all the answers that I found useful, and that actually helped me solve the problems that  I had.</p>
 
-<p>Not only that, but there are also a variety of tools on the internet, that can even be free, and that helped me a lot in applying a particular solution. This is why I will talk about these tools as well.</p>
+<p>Not only that, but there are also a variety of tools and frameworks on the internet, that helped me a lot in my creational journey. This is why I will talk about these tools as well.</p>
 
-<p>But even if I didn't use the tools in question, but I think that they may be relevant to your journey, I will also talk about them. </p>
-<p>This was a concise description of what these posts will be about. The goal is to share every week a useful tutorial or an interesting discovery, wishing that it will help you in your creational journey. Happy Creating 🙂.</p>
+<p>In the case I didn't use the tools and frameworks in question, but I thought that they may be relevant to your journey, I will also talk about them as well. </p>
+<p>This was a concise description of what these posts will be about. The goal is to share as much as possible useful tutorials or interesting discoveries, wishing that it will help you in your creational journey. Happy Creating 🙂.</p>
 
